tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/fault_abort/tproxy/to_b/_test_context/VirtualService.983893398.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - fault:
      abort:
        httpStatus: 418
        percentage:
          value: 100
    route:
    - destination:
        host: b
